--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 					<!-- Nav -->
 						<nav id="nav">
 							<ul>
-								<li><a href="#top" id="top-link"><span class="icon fa-home">Intro</span></a></li>
-								<li><a href="#portfolio" id="portfolio-link"><span class="icon fa-th">Portfolio</span></a></li>
+								<li><a href="#top" id="top-link"><span class="icon fa-home">Home</span></a></li>
+								<li><a href="#gallery" id="gallery-link"><span class="icon fa-th">Gallery</span></a></li>
 								<li><a href="#about" id="about-link"><span class="icon fa-user">About Me</span></a></li>
 								<li><a href="#contact" id="contact-link"><span class="icon fa-envelope">Contact</span></a></li>
 							</ul>
@@ -52,30 +52,27 @@
 		<!-- Main -->
 			<div id="main">
 
-				<!-- Intro -->
+				<!-- Home -->
 					<section id="top" class="one dark cover">
 						<div class="container">
 
 							<header>
-								<h2 class="alt">I'm <strong>Prologue</strong>, a <a href="http://html5up.net/license">free</a> responsive<br />
-								site template designed by <a href="http://html5up.net">HTML5 UP</a>.</h2>
-								<p>Hello World!<br />
+								<h2 class="alt"><strong>Hello!</strong></h2>
+								<p>I'm Sherry<br />
 								I am Awesome.</p>
 							</header>
 
-							<footer>
-								<a href="#portfolio" class="button scrolly">Magna Aliquam</a>
-							</footer>
+							
 
 						</div>
 					</section>
 
-				<!-- Portfolio -->
-					<section id="portfolio" class="two">
+				<!-- Gallery -->
+					<section id="gallery" class="two">
 						<div class="container">
 
 							<header>
-								<h2>Portfolio</h2>
+								<h2>Gallery</h2>
 							</header>
 
 							<p>Contact me to buy any of the images below!</p>
@@ -151,10 +148,7 @@
 								<h2>Contact</h2>
 							</header>
 
-							<p>Elementum sem parturient nulla quam placerat viverra
-							mauris non cum elit tempus ullamcorper dolor. Libero rutrum ut lacinia
-							donec curae mus. Eleifend id porttitor ac ultricies lobortis sem nunc
-							orci ridiculus faucibus a consectetur. Porttitor curae mauris urna mi dolor.</p>
+							<p>Original art or commission inquiries, or just say hello!</p>
 
 							<form method="post" action="#">
 								<div class="row">
