--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
 							<header>
 								<h2 class="alt"><strong>Hello!</strong></h2>
-								<p>I'm Sherry<br />
+								<p>Visual artist based in Calgary, AB<br />
 								I am Awesome.</p>
 							</header>
 
@@ -75,14 +75,15 @@
 								<h2>Gallery</h2>
 							</header>
 
-							<p>Contact me to buy any of the images below!</p>
+							<p>Contact me to buy any of my paintings below!</p>
 
 							<div class="row">
 								<div class="col-4 col-12-mobile">
 									<article class="item">
 										<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
 										<header>
-											<h3>Face - $50</h3>
+											<h3>acrylic on panel, 16x16 in<br />
+											$150 CAD</h3>
 										</header>
 									</article>
 									<article class="item">
