background colours to dark and other things

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Sherry Ma Art</title>
+		<title>Sherry Ma</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -42,7 +42,7 @@
 					<!-- Social Icons -->
 						<ul class="icons">
 							<li><a href="https://www.instagram.com/maasherry/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="#" class="icon fa-envelope"><span class="label">Email</span></a></li>
+							<li><a href="#contact" class="icon fa-envelope"><span class="label">Email</span></a></li>
 						</ul>
 
 				</div>
