change contact boxes

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 								<h2>Gallery</h2>
 							</header>
 
-							<p>Contact me to buy any of my paintings below!</p>
+							<p>Contact me to buy any of my paintings below.</p>
 
 							<div class="row">
 								<div class="col-4 col-12-mobile">
