--- a/index.html
+++ b/index.html
@@ -82,14 +82,15 @@
 									<article class="item">
 										<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
 										<header>
-											<h3>acrylic on panel, 16x16 in<br />
+											<h3>acrylic on panel, 16"x16", 2018<br />
 											$150 CAD</h3>
 										</header>
 									</article>
 									<article class="item">
 										<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
 										<header>
-											<h3>Rhoncus Semper</h3>
+											<h3>Untitled No.1, acrylic and sumi ink on panel, 16"x16", 2018<br />
+											$175 CAD</h3>
 										</header>
 									</article>
 								</div>
