add titles and images

--- a/index.html
+++ b/index.html
@@ -82,14 +82,14 @@
 									<article class="item">
 										<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
 										<header>
-											<h3>acrylic on panel, 16"x16", 2018<br />
-											$150 CAD</h3>
+											<h3>X, 16"x16", acrylic on panel<br />
+											$165 CAD</h3>
 										</header>
 									</article>
 									<article class="item">
 										<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
 										<header>
-											<h3>Untitled No.1, acrylic and sumi ink on panel, 16"x16", 2018<br />
+											<h3>Untitled No.1, 16"x16", acrylic and sumi ink on panel<br />
 											$175 CAD</h3>
 										</header>
 									</article>
@@ -98,13 +98,15 @@
 									<article class="item">
 										<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
 										<header>
-											<h3>Magna Nullam</h3>
+											<h3>Untitled No.2, 16"x16", acrylic and sumi ink on panel<br />
+											$175 CAD</h3>
 										</header>
 									</article>
 									<article class="item">
 										<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
 										<header>
-											<h3>Natoque Vitae</h3>
+											<h3>Untitled No.3, 16"x16", acrylic and sumi ink on panel<br />
+											$175 CAD</h3>
 										</header>
 									</article>
 								</div>
@@ -112,13 +114,15 @@
 									<article class="item">
 										<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
 										<header>
-											<h3>Dolor Penatibus</h3>
+											<h3>Lemon, 18"x18", acrylic on panel<br />
+											$185 CAD</h3>
 										</header>
 									</article>
 									<article class="item">
 										<a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
 										<header>
-											<h3>Orci Convallis</h3>
+											<h3>Sweet Jubilee, 16"x16", acrylic on panel<br />
+											$175 CAD</h3>
 										</header>
 									</article>
 								</div>
@@ -135,7 +139,7 @@
 								<h2>About Me</h2>
 							</header>
 
-							<a href="#" class="image featured"><img src="images/pic08.jpg" alt="" /></a>
+							<a href="#" class="image featured"><img src="images/pic10.jpg" alt="" /></a>
 
 							<p>Aspiring young artist!</p>
 
