--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 
 							<p>Original art or commission inquiries, or just say hello!</p>
 
-							<form method="post" action="#">
+							<form method="post" action="https://formspree.io/maa.sherry@gmail.com">
 								<div class="row">
 									<div class="col-6 col-12-mobile"><input type="text" name="name" placeholder="Name" /></div>
 									<div class="col-6 col-12-mobile"><input type="text" name="email" placeholder="Email" /></div>
