add h4 and h5 size

--- a/index.html
+++ b/index.html
@@ -155,7 +155,10 @@
 								<h2>Contact</h2>
 							</header>
 
-							<p>Original art or commission inquiries, or just say hello!</p>
+							<h4>Original art or commission inquiries, or say hello!</h4>
+							<h5 class="alt"><strong>Email: maa.sherry@gmail.com</strong></h5>
+							<br>
+
 
 							<form method="post" action="https://formspree.io/maa.sherry@gmail.com">
 								<div class="row">
