--- a/index.html
+++ b/index.html
@@ -42,7 +42,6 @@
 					<!-- Social Icons -->
 						<ul class="icons">
 							<li><a href="https://www.instagram.com/maasherry/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="#contact" class="icon fa-envelope"><span class="label">Email</span></a></li>
 						</ul>
 
 				</div>
@@ -81,14 +80,14 @@
 							<div class="row">
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
+										<a href="#" class="image fit"><img src="images/pic02.jpg" alt="X" /></a>
 										<header>
 											<h3>X, 16"x16", acrylic on panel<br />
 											$165 CAD</h3>
 										</header>
 									</article>
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
+										<a href="#" class="image fit"><img src="images/pic03.jpg" alt="Untitled No.1" /></a>
 										<header>
 											<h3>Untitled No.1, 16"x16", acrylic and sumi ink on panel<br />
 											$175 CAD</h3>
@@ -97,14 +96,14 @@
 								</div>
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
+										<a href="#" class="image fit"><img src="images/pic04.jpg" alt="Untitled No.2" /></a>
 										<header>
 											<h3>Untitled No.2, 16"x16", acrylic and sumi ink on panel<br />
 											$175 CAD</h3>
 										</header>
 									</article>
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
+										<a href="#" class="image fit"><img src="images/pic05.jpg" alt="Untitled No.3" /></a>
 										<header>
 											<h3>Untitled No.3, 16"x16", acrylic and sumi ink on panel<br />
 											$175 CAD</h3>
@@ -113,17 +112,17 @@
 								</div>
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
+										<a href="#" class="image fit"><img src="images/pic06.jpg" alt="Lemon" /></a>
 										<header>
 											<h3>Lemon, 18"x18", acrylic on panel<br />
-											$185 CAD</h3>
+											$195 CAD</h3>
 										</header>
 									</article>
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
+										<a href="#" class="image fit"><img src="images/pic07.jpg" alt="Sweet Jubilee" /></a>
 										<header>
 											<h3>Sweet Jubilee, 16"x16", acrylic on panel<br />
-											$175 CAD</h3>
+											$185 CAD</h3>
 										</header>
 									</article>
 								</div>
