--- a/index.html
+++ b/index.html
@@ -55,13 +55,10 @@
 					<section id="top" class="one dark cover">
 						<div class="container">
 
-
 							<header>
+								<p><img class="col-5" src="images/signature.png" alt="logo" width="50%" height="50%"/></p>
 								<h2 class="alt"><strong></strong></h2>
-								<p></p>
-							</header>
-
-							
+							</header>						
 
 						</div>
 					</section>
