--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 											</header>		
 									</article>
 								<article class="item">
-										<a href="#" class="image fit"><img src="images/untitled2.jpg" alt="Untitled No.2" /></a>
+										<a href="#" class="image fit"><img src="images/salmon.jpg" alt="Untitled No.2" /></a>
 										<header>
 											<h3>Untitled No.2, 16"x16", acrylic and sumi ink on panel<br />
 											$185 CAD</h3>
