change photo and prices

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 										<a href="#" class="image fit"><img src="images/ocean.jpg" alt="Ocean" /></a>
 										<header>
 											<h3>Ocean, 16"x16", acrylic on panel<br />
-											$175 CAD</h3>
+											$185 CAD</h3>
 										</header>
 									</article>
 									<article class="item">
@@ -98,9 +98,9 @@
 										</header>
 									</article>
 									<article class="item">
-											<a href="#" class="image fit"><img src="images/missingme.jpg" alt="" /></a>
+											<a href="#" class="image fit"><img src="images/dolphin.jpg" alt="Untitled No.1" /></a>
 											<header>
-												<h3>Missing Me, 18"x18", acrylic on panel<br />
+												<h3>Untitled No.1, 16"x16", acrylic and sumi ink on panel<br />
 												$185 CAD</h3>
 											</header>
 										</article>
@@ -110,7 +110,7 @@
 										<a href="#" class="image fit"><img src="images/peacock.jpg" alt="Peacock" /></a>
 										<header>
 											<h3>Peacock, 16"x16", acrylic on panel<br />
-											$175 CAD</h3>
+											$185 CAD</h3>
 										</header>
 									</article>
 									
@@ -118,7 +118,7 @@
 										<a href="#" class="image fit"><img src="images/fern.jpg" alt="Fern" /></a>
 										<header>
 											<h3>Fern, 16"x16", acrylic on panel<br />
-											$175 CAD</h3>
+											$185 CAD</h3>
 										</header>
 									</article>
 									<article class="item">
@@ -161,7 +161,7 @@
 											</header>		
 									</article>
 								<article class="item">
-										<a href="#" class="image fit"><img src="images/untitled3.jpg" alt="Untitled No.3" /></a>
+										<a href="#" class="image fit"><img src="images/mint.jpg" alt="Untitled No.3" /></a>
 										<header>
 											<h3>Untitled No.3, 16"x16", acrylic and sumi ink on panel<br />
 											$185 CAD</h3>
