add exhibition info

--- a/index.html
+++ b/index.html
@@ -267,6 +267,18 @@
 							If you're interested in purchasing any of my art or want something custom, please get in touch with me!</p>
 
 						</div>
+
+					<h4><br>Current Exhibitions</h4><br>
+					<h4 class ="alt"><strong>IGNITE! EMERGING ARTIST EXHIBIT</strong></h4>
+					<h5 class="alt"><strong>Pumphouse Theatre <br>
+						April 12 - June 15, 2019</strong></h5>
+
+						<br>
+
+					<h4 class ="alt"><strong>MALAISE</strong></h4>
+					<h5 class ="alt"><strong>Arts Commons +15 Window Galleries <br>
+						March 8 - May 20, 2019</strong></h5>
+					
 					</section>
 
 				<!-- Contact -->
