--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 							<div class="row">
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/sweetjubilee.jpg" alt="Sweet Jubilee" /></a>
+										<a href="images/sweetjubilee.jpg" class="image fit"><img src="images/sweetjubilee.jpg" alt="Sweet Jubilee" /></a>
 										<header>
 											<h3>Sweet Jubilee, 16"x16", acrylic on panel<br />
 											$185 CAD</h3>
