add image links

--- a/index.html
+++ b/index.html
@@ -84,21 +84,21 @@
 										</header>
 									</article>
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/ocean.jpg" alt="Ocean" /></a>
+										<a href="images/lavender.jpg" class="image fit"><img src="images/lavender.jpg" alt="Lavender" /></a>
 										<header>
-											<h3>Ocean, 16"x16", acrylic on panel<br />
+											<h3>Lavender, 16"x16", acrylic on panel<br />
 											$185 CAD</h3>
 										</header>
 									</article>
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/X.jpg" alt="X" /></a>
+										<a href="images/X.jpg" class="image fit"><img src="images/X.jpg" alt="X" /></a>
 										<header>
 											<h3>X, 16"x16", acrylic on panel<br />
 											$165 CAD</h3>
 										</header>
 									</article>
 									<article class="item">
-											<a href="#" class="image fit"><img src="images/dolphin.jpg" alt="Untitled No.1" /></a>
+											<a href="images/dolphin.jpg" class="image fit"><img src="images/dolphin.jpg" alt="Untitled No.1" /></a>
 											<header>
 												<h3>Untitled No.1, 16"x16", acrylic and sumi ink on panel<br />
 												$185 CAD</h3>
@@ -107,7 +107,7 @@
 								</div>
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/peacock.jpg" alt="Peacock" /></a>
+										<a href="images/peacock.jpg" class="image fit"><img src="images/peacock.jpg" alt="Peacock" /></a>
 										<header>
 											<h3>Peacock, 16"x16", acrylic on panel<br />
 											$185 CAD</h3>
@@ -115,21 +115,21 @@
 									</article>
 									
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/fern.jpg" alt="Fern" /></a>
+										<a href="images/fern.jpg" class="image fit"><img src="images/fern.jpg" alt="Fern" /></a>
 										<header>
 											<h3>Fern, 16"x16", acrylic on panel<br />
 											$185 CAD</h3>
 										</header>
 									</article>
 									<article class="item">
-											<a href="#" class="image fit"><img src="images/torn2.jpg" alt="Torn-II" /></a>
+											<a href="images/torn2.jpg" class="image fit"><img src="images/torn2.jpg" alt="Torn-II" /></a>
 											<header>
 												<h3>Torn-II, 12"x12", acrylic on cradled panel<br />
 												$95 CAD</h3>
 											</header>		
 									</article>
 								<article class="item">
-										<a href="#" class="image fit"><img src="images/salmon.jpg" alt="Untitled No.2" /></a>
+										<a href="images/salmon.jpg" class="image fit"><img src="images/salmon.jpg" alt="Untitled No.2" /></a>
 										<header>
 											<h3>Untitled No.2, 16"x16", acrylic and sumi ink on panel<br />
 											$185 CAD</h3>
@@ -139,7 +139,7 @@
 								</div>
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/lemon.jpg" alt="Lemon" /></a>
+										<a href="images/lemon.jpg" class="image fit"><img src="images/lemon.jpg" alt="Lemon" /></a>
 										<header>
 											<h3>Lemon, 18"x18", acrylic on panel<br />
 											$195 CAD</h3>
@@ -147,21 +147,21 @@
 									</article>
 									
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/dandelion.jpg" alt="Dandelion" /></a>
+										<a href="images/dandelion.jpg" class="image fit"><img src="images/dandelion.jpg" alt="Dandelion" /></a>
 										<header>
 											<h3>Dandelion, 16"x16", acrylic on panel<br />
 											$185 CAD</h3>
 										</header>		
 									</article>
 									<article class="item">
-											<a href="#" class="image fit"><img src="images/torn3.jpg" alt="Torn-III" /></a>
+											<a href="images/torn3.jpg" class="image fit"><img src="images/torn3.jpg" alt="Torn-III" /></a>
 											<header>
 												<h3>Torn-III, 12"x12", acrylic on cradled panel<br />
 												$95 CAD</h3>
 											</header>		
 									</article>
 								<article class="item">
-										<a href="#" class="image fit"><img src="images/mint.jpg" alt="Untitled No.3" /></a>
+										<a href="images/mint.jpg" class="image fit"><img src="images/mint.jpg" alt="Untitled No.3" /></a>
 										<header>
 											<h3>Untitled No.3, 16"x16", acrylic and sumi ink on panel<br />
 											$185 CAD</h3>
