--- a/index.html
+++ b/index.html
@@ -256,10 +256,11 @@
 					
 
 				<!-- About Me -->
+
 					<section id="about" class="three">
 						<div class="container">
 
-							<a href="#" class="image featured"><img src="images/pic10.jpg" alt="" /></a>
+							<img class="image featured"><img src="images/pic10.jpg" width=100%/></img>
 
 							<h4>Hello!</h4> <br>
 							<p>I'm Sherry and I love to paint and draw, and all things related to visual arts. I recently graduated from the University of Calgary with a Bsc in Psychology and a minor in Visual Studies. I mainly paint with acrylic and oil, but I also work with ink and charcoal. <br>
