--- a/index.html
+++ b/index.html
@@ -236,7 +236,15 @@
 
 								<div class="col-3 col-12-mobile">
 										<article class="item">
-											<a href="#" class="image fit"><img src="images/cody.jpg" alt="Cody" /></a>
+											<a href="#" class="image fit"><img src="images/duck.jpg" alt="Mandarin Duck (1/2)" /></a>
+											<div class="overlay">
+											<div class="text">Cody<br>
+											4"x 6"<br>
+											oil on panel</div>
+											</div>
+										</article>
+										<article class="item">
+											<a href="#" class="image fit"><img src="images/duck2.jpg" alt="Mandarin Duck (2/2)" /></a>
 											<div class="overlay">
 											<div class="text">Cody<br>
 											4"x 6"<br>
@@ -261,7 +269,7 @@
 						<div class="container">
 
 							<img class="image featured"><img src="images/pic10.jpg" width=100%/></img>
-
+							<header></header>
 							<h4>Hello!</h4> <br>
 							<p>I'm Sherry and I love to paint and draw, and all things related to visual arts. I recently graduated from the University of Calgary with a Bsc in Psychology and a minor in Visual Studies. I mainly paint with acrylic and oil, but I also work with ink and charcoal. <br>
 							<br>
