--- a/index.html
+++ b/index.html
@@ -73,18 +73,36 @@
 							</header>
 
 							<p>PORTRAIT</p>
-						
+							<!-- The Modal -->
+								<div id="myModal" class="modal">
+									<div id="modalContainer" class = mContainer>
+										<!-- The Close Button -->
+										<span class="close">&times;</span>
+
+										<!-- Modal Content (The Image) -->
+										<img class="modal-content" id="img01">
+									
+										<!-- Modal Caption (Image Text) -->
+										<div id="caption"></div>
+									</div>
+							</div>
 							<div class="row">
 								<div class="col-4 col-12-mobile">
+
+
 									<article class="item">
-										<a href="images/sweetjubilee.jpg" class="image fit"><img src="images/sweetjubilee.jpg" alt="Sweet Jubilee" /></a>
+										<a class="image fit"><img id="sweetjubilee" src="images/sweetjubilee.jpg" alt="Sweet Jubilee" /></a>
 										<header>
 											<h3>Sweet Jubilee, 16"x16", acrylic on panel<br />
 											$185 CAD</h3>
 										</header>
+
 									</article>
+
+
+
 									<article class="item">
-										<a href="images/lavender.jpg" class="image fit"><img src="images/lavender.jpg" alt="Lavender" /></a>
+										<a class="image fit"><img id="lavender" src="images/lavender.jpg" alt="Lavender" /></a>
 										<header>
 											<h3>Lavender, 16"x16", acrylic on panel<br />
 											$185 CAD</h3>
