change order of pics

--- a/index.html
+++ b/index.html
@@ -234,14 +234,15 @@
 								</div>
 
 								<div class="col-3 col-12-mobile">
-										<article class="item">
-												<a href="#" class="image fit"><img src="images/zero.jpg" alt="Zero" /></a>
-												<div class="overlay">
-														<div class="text">Zero<br>
-														3"x 4"<br>
-														acrylic on panel</div>
-														</div>
-										</article>
+									<article class="item">
+										<a href="#" class="image fit"><img src="images/duck.jpeg" alt="Mandarin Duck (1/2)" /></a>
+										<div class="overlay">
+										<div class="text">Quack 1<br>
+										5"x 7"<br>
+										oil on panel</div>
+										</div>
+									</article>	
+								
 										<article class="item">
 												<a href="#" class="image fit"><img src="images/hubert.jpg" alt="Hubert" /></a>
 												<div class="overlay">
@@ -253,22 +254,22 @@
 								</div>
 
 								<div class="col-3 col-12-mobile">
-										<article class="item">
-											<a href="#" class="image fit"><img src="images/duck.jpg" alt="Mandarin Duck (1/2)" /></a>
+									<article class="item">
+										<a href="#" class="image fit"><img src="images/duck2.jpeg" alt="Mandarin Duck (2/2)" /></a>
+										<div class="overlay">
+										<div class="text">Quack 2<br>
+										5"x 7"<br>
+										oil on panel</div>
+										</div>
+									</article>
+									<article class="item">
+											<a href="#" class="image fit"><img src="images/zero.jpg" alt="Zero" /></a>
 											<div class="overlay">
-											<div class="text">Cody<br>
-											4"x 6"<br>
-											oil on panel</div>
-											</div>
-										</article>
-										<article class="item">
-											<a href="#" class="image fit"><img src="images/duck2.jpg" alt="Mandarin Duck (2/2)" /></a>
-											<div class="overlay">
-											<div class="text">Cody<br>
-											4"x 6"<br>
-											oil on panel</div>
-											</div>
-										</article>
+													<div class="text">Zero<br>
+													3"x 4"<br>
+													acrylic on panel</div>
+													</div>
+									</article>
 										
 								</div>
 						<div class="container">
