--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 									<article class="item">
 										<a class="image fit"><img id="sweetjubilee" src="images/sweetjubilee.jpg" alt="Sweet Jubilee" /></a>
 										<header>
-											<h3>Sweet Jubilee, 16"x16", acrylic on panel<br />
+											<h3>Sweet Jubilee<br />
 											$185 CAD</h3>
 										</header>
 
@@ -104,7 +104,7 @@
 									<article class="item">
 										<a class="image fit"><img id="lavender" src="images/lavender.jpg" alt="Lavender" /></a>
 										<header>
-											<h3>Lavender, 16"x16", acrylic on panel<br />
+											<h3>Lavender<br />
 											$185 CAD</h3>
 										</header>
 									</article>
