--- a/index.html
+++ b/index.html
@@ -99,8 +99,6 @@
 
 									</article>
 
-
-
 									<article class="item">
 										<a class="image fit"><img id="lavender" src="images/lavender.jpg" alt="Lavender" /></a>
 										<header>
@@ -109,9 +107,9 @@
 										</header>
 									</article>
 									<article class="item">
-										<a href="images/X.jpg" class="image fit"><img src="images/X.jpg" alt="X" /></a>
+										<a class="image fit"><img id="XX" src="images/XX.jpg" alt="XX" /></a>
 										<header>
-											<h3>X, 16"x16", acrylic on panel<br />
+											<h3>XX<br />
 											$165 CAD</h3>
 										</header>
 									</article>
