--- a/index.html
+++ b/index.html
@@ -114,40 +114,40 @@
 										</header>
 									</article>
 									<article class="item">
-											<a href="images/dolphin.jpg" class="image fit"><img src="images/dolphin.jpg" alt="Untitled No.1" /></a>
+											<a class="image fit"><img id="dolphin" src="images/dolphin.jpg" alt="Untitled No.1" /></a>
 											<header>
-												<h3>Untitled No.1, 16"x16", acrylic and sumi ink on panel<br />
+												<h3>Untitled No.1<br />
 												$185 CAD</h3>
 											</header>
 										</article>
 								</div>
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="images/peacock.jpg" class="image fit"><img src="images/peacock.jpg" alt="Peacock" /></a>
+										<a class="image fit"><img id="peacock" src="images/peacock.jpg" alt="Peacock" /></a>
 										<header>
-											<h3>Peacock, 16"x16", acrylic on panel<br />
+											<h3>Peacock<br />
 											$185 CAD</h3>
 										</header>
 									</article>
 									
 									<article class="item">
-										<a href="images/fern.jpg" class="image fit"><img src="images/fern.jpg" alt="Fern" /></a>
+										<a class="image fit"><img id="fern" src="images/fern.jpg" alt="Fern" /></a>
 										<header>
-											<h3>Fern, 16"x16", acrylic on panel<br />
+											<h3>Fern<br />
 											$185 CAD</h3>
 										</header>
 									</article>
 									<article class="item">
-											<a href="images/torn2.jpg" class="image fit"><img src="images/torn2.jpg" alt="Torn-II" /></a>
+											<a class="image fit"><img id="torn2" src="images/torn2.jpg" alt="Torn-II" /></a>
 											<header>
-												<h3>Torn-II, 12"x12", acrylic on cradled panel<br />
+												<h3>Torn-II<br />
 												$95 CAD</h3>
 											</header>		
 									</article>
 								<article class="item">
-										<a href="images/salmon.jpg" class="image fit"><img src="images/salmon.jpg" alt="Untitled No.2" /></a>
+										<a class="image fit"><img id="salmon" src="images/salmon.jpg" alt="Untitled No.2" /></a>
 										<header>
-											<h3>Untitled No.2, 16"x16", acrylic and sumi ink on panel<br />
+											<h3>Untitled No.2<br />
 											$185 CAD</h3>
 										</header>
 									</article>
@@ -155,31 +155,31 @@
 								</div>
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="images/lemon.jpg" class="image fit"><img src="images/lemon.jpg" alt="Lemon" /></a>
+										<a class="image fit"><img id="lemon" src="images/lemon.jpg" alt="Lemon" /></a>
 										<header>
-											<h3>Lemon, 18"x18", acrylic on panel<br />
+											<h3>Lemon<br />
 											$195 CAD</h3>
 										</header>
 									</article>
 									
 									<article class="item">
-										<a href="images/dandelion.jpg" class="image fit"><img src="images/dandelion.jpg" alt="Dandelion" /></a>
+										<a class="image fit"><img id="dandelion" src="images/dandelion.jpg" alt="Dandelion" /></a>
 										<header>
-											<h3>Dandelion, 16"x16", acrylic on panel<br />
+											<h3>Dandelion<br />
 											$185 CAD</h3>
 										</header>		
 									</article>
 									<article class="item">
-											<a href="images/torn3.jpg" class="image fit"><img src="images/torn3.jpg" alt="Torn-III" /></a>
+											<a class="image fit"><img id="torn3" src="images/torn3.jpg" alt="Torn-III" /></a>
 											<header>
-												<h3>Torn-III, 12"x12", acrylic on cradled panel<br />
+												<h3>Torn-III<br />
 												$95 CAD</h3>
 											</header>		
 									</article>
 								<article class="item">
-										<a href="images/mint.jpg" class="image fit"><img src="images/mint.jpg" alt="Untitled No.3" /></a>
+										<a class="image fit"><img id="mint" src="images/mint.jpg" alt="Untitled No.3" /></a>
 										<header>
-											<h3>Untitled No.3, 16"x16", acrylic and sumi ink on panel<br />
+											<h3>Untitled No.3<br />
 											$185 CAD</h3>
 										</header>
 									</article>
