color and font sizes

--- a/index.html
+++ b/index.html
@@ -72,7 +72,8 @@
 								<h2>Gallery</h2>
 							</header>
 
-							<p>PORTRAIT</p>
+							<h3 class="alt">PORTRAIT</h3>
+						</br>
 							<!-- The Modal -->
 								<div id="myModal" class="modal">
 									<div id="modalContainer" class = mContainer>
@@ -96,9 +97,7 @@
 											<h3>Sweet Jubilee<br />
 											$185 CAD</h3>
 										</header>
-
 									</article>
-
 									<article class="item">
 										<a class="image fit"><img id="lavender" src="images/lavender.jpg" alt="Lavender" /></a>
 										<header>
@@ -160,8 +159,7 @@
 											<h3>Lemon<br />
 											$195 CAD</h3>
 										</header>
-									</article>
-									
+									</article>				
 									<article class="item">
 										<a class="image fit"><img id="dandelion" src="images/dandelion.jpg" alt="Dandelion" /></a>
 										<header>
@@ -189,7 +187,7 @@
 						<div class="container">
 			
 							<header>
-								<p>ANIMAL</p>
+								<h3 class="alt"></br>ANIMALS</h3>
 							</header>
 						</div>
 
@@ -308,14 +306,14 @@
 
 							<img class="image featured"><img src="images/pic10.jpg" width=100%/></img>
 							<header></header>
-							<h4>Hello!</h4> <br>
+							<h3>Hello!</h3> <br>
 							<p>I'm Sherry and I love to paint and draw, and all things related to visual arts. I recently graduated from the University of Calgary with a Bsc in Psychology and a minor in Visual Studies. I mainly paint with acrylic and oil, but I also work with ink and charcoal. <br>
 							<br>
 							If you're interested in purchasing any of my art or want something custom, please get in touch with me!</p>
 
 						</div>
 
-					<h4><br>Current Exhibitions</h4><br>
+					<h3><br>Current Exhibitions</h3><br>
 					<h4 class ="alt"><strong>IGNITE! EMERGING ARTIST EXHIBIT</strong></h4>
 					<h5 class="alt"><strong>Pumphouse Theatre <br>
 						April 12 - June 15, 2019</strong></h5>
