--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 						<div class="container">
 
 							<header>
-								<h2>Gallery</h2>
+								<h2>GALLERY</h2>
 							</header>
 
 							<h3 class="alt">PORTRAIT</h3>
@@ -306,23 +306,26 @@
 
 							<img class="image featured"><img src="images/pic10.jpg" width=100%/></img>
 							<header></header>
-							<h3>Hello!</h3> <br>
+							<h3 class="alt"><strong>HELLO!</strong></h3> 
 							<p>I'm Sherry and I love to paint and draw, and all things related to visual arts. I recently graduated from the University of Calgary with a Bsc in Psychology and a minor in Visual Studies. I mainly paint with acrylic and oil, but I also work with ink and charcoal. <br>
-							<br>
+						
 							If you're interested in purchasing any of my art or want something custom, please get in touch with me!</p>
 
 						</div>
 
-					<h3><br>Current Exhibitions</h3><br>
+					<h3 class="alt"><strong>Current Exhibitions</strong></h3>
 					<h4 class ="alt"><strong>IGNITE! EMERGING ARTIST EXHIBIT</strong></h4>
 					<h5 class="alt"><strong>Pumphouse Theatre <br>
-						April 12 - June 15, 2019</strong></h5>
+						Apr 12 - Jun 15, 2019</strong></h5>
 
-						<br>
-
+						<h3 class="alt"><strong>Past Exhibitions</strong></h3>
 					<h4 class ="alt"><strong>MALAISE</strong></h4>
-					<h5 class ="alt"><strong>Arts Commons +15 Window Galleries <br>
-						March 8 - May 20, 2019</strong></h5>
+					<h5 class ="alt"><strong>Arts Commons +15 Window Galleries<br>
+						Mar 8 - May 20, 2019</strong></h5><br>
+
+					<h4 class ="alt"><strong>INDEPENDENT CODEPENDENCE</strong></h4>
+					<h5 class ="alt"><strong>The Little Gallery, University of Calgary<br>
+						Jan 28 - Feb 1, 2019</strong></h5>
 					
 					</section>
 
@@ -331,7 +334,7 @@
 						<div class="container">
 
 							<header>
-								<h2>Contact</h2>
+								<h2>CONTACT</h2>
 							</header>
 
 							<h4 class="alt"><strong>Original art or commission inquiries, or say hello.</strong></h4>
