--- a/index.html
+++ b/index.html
@@ -84,8 +84,6 @@
 							</div>
 							<div class="row">
 								<div class="col-4 col-12-mobile">
-
-
 									<article class="item">
 										<a class="image fit"><img id="sweetjubilee" src="images/sweetjubilee.jpg" alt="Sweet Jubilee" /></a>
 										<header>
@@ -113,9 +111,18 @@
 												<h3>Untitled No.1<br />
 												$185</h3>
 											</header>
-										</article>
-								</div>
-								<div class="col-4 col-12-mobile">
+									</article>
+									<article class="item">
+										<a class="image fit"><img id="missingme" src="images/missingme.jpg" alt="Missing Me" /></a>
+										<header>
+											<h3>Missing Me<br />
+											$200</h3>
+										</header>
+									</article>
+									
+							</div>
+								
+							<div class="col-4 col-12-mobile">
 									<article class="item">
 										<a class="image fit"><img id="peacock" src="images/peacock.jpg" alt="Peacock" /></a>
 										<header>
@@ -152,7 +159,7 @@
 										<a class="image fit"><img id="lemon" src="images/lemon.jpg" alt="Lemon" /></a>
 										<header>
 											<h3>Lemon<br />
-											$195</h3>
+											$200</h3>
 										</header>
 									</article>				
 									<article class="item">
